--- a/src/variables.css
+++ b/src/variables.css
@@ -8,6 +8,7 @@
 
     --background-color: #18191a;
     --background-color-trans: #18191a84;
+    --background-color-clear: #ffffff00;
     --outline-color: #d7d9db;
     --text-color: #d7d9db;
     --text-color-tanya: #ff762c;
